# wlc-mcp

./: .env.example  .gitignore  .mcp.json  EXAMPLE_PROMPT.md  README.md  pyproject.toml
.github/workflows/: ci.yml
src/wlc_mcp/: __init__.py  client.py  config.py  server.py
src/wlc_mcp/tools/: __init__.py  aaa.py  monitor.py  policy.py  raw.py  system.py  tags.py  wlans.py
tests/: smoke_test.py  test_client_unit.py
